add a single leg instrument, this can be used for money market trades, or with the CompositeInstrument class to represent multi-leg exotic IR structures

--- a/QuantLib/ql/instruments/Makefile.am
+++ b/QuantLib/ql/instruments/Makefile.am
@@ -46,6 +46,7 @@ this_include_HEADERS = \
     quantobarrieroption.hpp \
     quantoforwardvanillaoption.hpp \
     quantovanillaoption.hpp \
+    singleleg.hpp \
     stickyratchet.hpp \
     stock.hpp \
     swap.hpp \
@@ -97,6 +98,7 @@ libInstruments_la_SOURCES = \
     quantobarrieroption.cpp \
     quantoforwardvanillaoption.cpp \
     quantovanillaoption.cpp \
+    singleleg.cpp \
     stickyratchet.cpp \
     stock.cpp \
     swap.cpp \
